<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrrond">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="644dp"
        android:text="@string/payCash"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="273dp"
        android:layout_height="155dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="475dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/vehicleID"
        android:layout_width="103dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="373dp"
        android:text="@string/VehicleID"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="107dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="393dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="311dp"
        android:text="@string/customer_nic"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:text="@string/BookedDate"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="465dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:text="@string/TotalAmount"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="530dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="322dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="364dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="312dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="453dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="520dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="369dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="85dp"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnconfirm"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="667dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btncolo"
        android:text="@string/confirm"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

