<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnConfirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrrond"
    tools:context=".cash">


    <TextView
        android:id="@+id/textView"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="613dp"
        android:text="@string/payCash"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImageView2"
        android:layout_width="218dp"
        android:layout_height="130dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="467dp"
        android:contentDescription="@string/imageview2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/vehicleID"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="372dp"
        android:text="@string/VehicleID"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="312dp"
        android:text="@string/customer_nic"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="435dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="254dp"
        android:text="@string/BookedDate"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="495dp"
        android:layout_marginEnd="224sp"
        android:layout_marginBottom="198sp"
        android:text="@string/TotalAmount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="352dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="100dp"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        android:textSize="20sp"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnconfirm"
        android:layout_width="194dp"
        android:layout_height="60dp"
        android:layout_marginStart="191dp"
        android:layout_marginTop="655dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btncolo"
        android:text="Confirm"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ExtraText" />

    <EditText
        android:id="@+id/txtID"
        android:layout_width="152dp"
        android:layout_height="45dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="368dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNIC"
        android:layout_width="152dp"
        android:layout_height="45dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="312dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtdate"
        android:layout_width="152dp"
        android:layout_height="45dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="443dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="254dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtamount"
        android:layout_width="91dp"
        android:layout_height="111dp"
        android:layout_marginStart="213dp"
        android:layout_marginTop="495dp"
        android:layout_marginEnd="34dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>