<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carrental"
    tools:context=".Payment">

    <Button
        android:id="@+id/btnCash"
        android:layout_width="131dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/settin"
        android:text="@string/CashPayment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreditPayment"
        app:layout_constraintVertical_bias="0.685" />

    <Button
        android:id="@+id/btnfind"
        android:layout_width="131dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="245dp"
        android:background="@drawable/settin"
        android:text="@string/Find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCash" />

    <Button
        android:id="@+id/btnCreditPayment"
        android:layout_width="131dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="441dp"
        android:background="@drawable/settin"
        android:text="@string/CreditPayment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="288dp"
        android:layout_height="47dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="587dp"
        android:background="@drawable/btncolo"
        android:text="     Payment   Method"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>