<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrrond"
    tools:context=".credit">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="640dp"
        android:text="Pay with Credit card"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="281dp"
        android:layout_height="179dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="445dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/vehicleID"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="322dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="364dp"
        android:text="@string/VehicleID"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtID"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="329dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="364dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="308dp"
        android:text="@string/customer_nic"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNIC"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="308dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="252dp"
        android:text="@string/BookedDate"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtdate"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="252dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="487dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="199dp"
        android:text="@string/TotalAmount"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtamount"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="196dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="543dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="136dp"
        android:text="@string/textview18"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCno"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="543dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="81dp"
        android:text="@string/textview19"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtcvv"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="85dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="278dp"
        android:layout_marginTop="667dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btncolo"
        android:text="pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>